--- a/Pages/index.html
+++ b/Pages/index.html
@@ -25,7 +25,7 @@
             </ul>
             <div>
               <div id="authButtons">
-                <a href="login"><button class="btn btn-primary mx-2" type="submit">Log In</button></a>
+                <a href="login.html"><button class="btn btn-primary mx-2" type="submit">Log In</button></a>
                 <a href="signup"><button class="btn btn-primary mx-2" type="submit">Sign Up</button></a>
               </div>
               <button id="logoutBtn" class="btn btn-danger mx-2" style="display:none;">Log Out</button>
